# AdvancedJupyter

./: ExampleNotebook1.ipynb  ExampleNotebook2.ipynb  ExampleNotebook2_skeleton.ipynb  Makefile  README.md  pyproject.toml
