[project]
name = "advancedjupyter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=8.27.0",
    "jupyter>=1.1.1",
    "statsmodels>=0.14.3",
    "rpy2>=3.5.16",
    "numpy>=2.1.1",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "jupytext>=1.16.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
